--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 python-dotenv = "^1.0.0"
+pydantic-settings = "^2.13.0"
 
 [build-system]
 requires = ["poetry-core"]
