Работает + Работает Создание user добавляется в бд

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,9 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 python-dotenv = "^1.0.0"
 pydantic-settings = "^2.13.0"
+email-validator = "^2.3.0"
+bcrypt = "^5.0.0"
+jose = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
