--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ pydantic-settings = "^2.13.0"
 email-validator = "^2.3.0"
 bcrypt = "^5.0.0"
 jose = "^1.0.0"
+fastapi-mail = "^1.6.2"
 
 [build-system]
 requires = ["poetry-core"]
